--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "taskonbudget-backend",
   "version": "0.0.1",
-  "description": "",
+  "description": "TaskOnBudget Backend API",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "prisma generate",
     "build": "nest build",
-    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && nest build",
+    "postinstall": "prisma generate || true",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
